# microscope-torch

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
src/: main-split.cpp  main-whole.cpp  main.cpp
src/torch/: base.cpp  base.h
