[tool.poetry]
name = "microscope-torch"
version = "0.1.0"
description = ""
authors = ["favouritetasty <19307110112@fudan.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
torch = "^2.5.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
